--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -8,5 +8,6 @@
     </parent>
     <artifactId>domain</artifactId>
     <name>Archetype - domain</name>
+    <version>6.0.0</version>
     <url>http://maven.apache.org</url>
 </project>
